plugins {
  id 'org.jetbrains.kotlin.jvm' version '1.3.70'
  id 'application'
  id 'java'
  id 'com.github.johnrengelman.shadow' version '5.1.0'
}

group = 'hoper.xyz'
version = '1.0.0-SNAPSHOT'
java.sourceCompatibility = JavaVersion.VERSION_11
java.targetCompatibility = JavaVersion.VERSION_11

repositories {
  mavenCentral()
  jcenter()
}

ext {
  kotlinVersion = '1.3.70'
  vertxVersion = '3.9.0'
  junitJupiterEngineVersion = '5.4.0'
}

application {
  mainClassName = 'io.vertx.core.Launcher'
}


def mainVerticleName = 'hoper.xyz.MainVerticle'
def watchForChange = 'src/**/*'
def doOnChange = './gradlew classes'

dependencies {
  implementation "$kotlin-stdlib-jdk8"
  implementation "$kotlin-reflect"

  implementation fileTree(include: ['*.jar'], dir: 'libs')
  implementation "org.apache.commons:commons-lang3:3.8.1"
  implementation "org.objenesis:objenesis:3.0.1"
  compileOnly    "io.netty:netty-all:[5.0.0.Alpha2,)"
  implementation "io.vertx:vertx-auth-jwt:$vertxVersion"
  implementation "io.vertx:vertx-web:$vertxVersion"
  implementation "io.vertx:vertx-grpc:$vertxVersion"
  implementation "io.vertx:vertx-mysql-client:$vertxVersion"
  implementation "io.vertx:vertx-service-discovery:$vertxVersion"
  implementation "io.vertx:vertx-http-service-factory:$vertxVersion"
  implementation "io.vertx:vertx-web-api-contract:$vertxVersion"
  implementation "io.vertx:vertx-auth-oauth2:$vertxVersion"
  implementation "io.vertx:vertx-redis-client:$vertxVersion"
  implementation "io.vertx:vertx-mqtt:$vertxVersion"
  implementation "io.vertx:vertx-config:$vertxVersion"
  implementation "io.vertx:vertx-web-graphql:$vertxVersion"
  implementation "io.vertx:vertx-rx-java2:$vertxVersion"
  implementation "io.vertx:vertx-junit5:$vertxVersion"
  implementation "io.vertx:vertx-maven-service-factory:$vertxVersion"
  implementation "io.vertx:vertx-service-factory:$vertxVersion"
  implementation "io.vertx:vertx-pg-client:$vertxVersion"
  implementation "io.vertx:vertx-circuit-breaker:$vertxVersion"
  implementation "io.vertx:vertx-lang-kotlin-coroutines:$vertxVersion"
  implementation "io.vertx:vertx-rabbitmq-client:$vertxVersion"
  implementation "io.vertx:vertx-lang-kotlin:$vertxVersion"

  implementation "org.slf4j:slf4j-log4j12:2.0.0-alpha1"

  testImplementation "io.vertx:vertx-junit5:$vertxVersion"
  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitJupiterEngineVersion"
  testImplementation "org.junit.jupiter:junit-jupiter-api:$junitJupiterEngineVersion"
  implementation "org.jetbrains.kotlin:kotlin-script-runtime:1.3.61"
}

[compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'

compileJava {
    options.compilerArgs = [
      "--add-opens=java.base/jdk.internal.misc=jvm",
      "--add-exports=java.base/jdk.internal.misc=jvm",
      '--module-path', classpath.asPath,
    ]
     classpath = files()
}

compileKotlin {
  kotlinOptions.jvmTarget = '11'
}

compileTestKotlin {
  kotlinOptions.jvmTarget = '11'
}


shadowJar {
  manifest {
    attributes 'Main-Verticle': mainVerticleName
  }
  mergeServiceFiles {
    include 'META-INF/services/io.vertx.core.spi.VerticleFactory'
  }
}

test {
  useJUnitPlatform()
  testLogging {
    events 'PASSED', 'FAILED', 'SKIPPED'
  }
}

run {
  args = ['run', mainVerticleName, "--redeploy=$watchForChange", "--launcher-class=$mainClassName", "--on-redeploy=$doOnChange"]
}
